--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,13 +13,10 @@ jobs:
       - name: Install .NET
         uses: actions/setup-dotnet@v1.7.2
         with:
-          dotnet-version: 5.0.x        
-
-      - name: Install MSBuild
-        uses: microsoft/setup-msbuild@v1.0.2
+          dotnet-version: 5.0.x
 
       - name: Restore packages
         run: dotnet restore
 
       - name: Build
-        run: msbuild -p:Configuration=Release
+        run: dotnet build --configuration Release
