--- a/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
+++ b/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
@@ -1,90 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3E22118-1186-41FB-939F-7C48EA109D07}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>DotnetRuntimeBootstrapper.Executable</RootNamespace>
-    <AssemblyName>DotnetRuntimeBootstrapper.Executable</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <TargetFramework>net35</TargetFramework>
+    <IsPackable>false</IsPackable>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>../favicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Env\Dotnet.cs" />
-    <Compile Include="Env\OperatingSystem.cs" />
-    <Compile Include="Env\OperatingSystemVersion.cs" />
-    <Compile Include="Env\ProcessorArchitecture.cs" />
-    <Compile Include="InstallationForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="InstallationForm.Designer.cs">
-      <DependentUpon>InstallationForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="BootstrapperConfig.cs" />
-    <Compile Include="Native\NativeMethods.cs" />
-    <Compile Include="Native\SystemInfo.cs" />
-    <Compile Include="Native\SystemVersionInfo.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="RuntimeComponents\DotnetRuntimeComponent.cs" />
-    <Compile Include="RuntimeComponents\RuntimeComponentInstaller.cs" />
-    <Compile Include="RuntimeComponents\IRuntimeComponent.cs" />
-    <Compile Include="RuntimeComponents\VisualCppRuntimeComponent.cs" />
-    <Compile Include="RuntimeComponents\WindowsUpdate2999226RuntimeComponent.cs" />
-    <Compile Include="RuntimeComponents\WindowsUpdate3063858RuntimeComponent.cs" />
-    <Compile Include="RuntimeComponents\WindowsUpdate3154518RuntimeComponent.cs" />
-    <Compile Include="Utils\CommandLine.cs" />
-    <Compile Include="Utils\Extensions\AssemblyExtensions.cs" />
-    <Compile Include="Utils\Extensions\CollectionExtensions.cs" />
-    <Compile Include="Utils\Extensions\FunctionalExtensions.cs" />
-    <Compile Include="Utils\Extensions\RegistryExtensions.cs" />
-    <Compile Include="Utils\Extensions\StringExtensions.cs" />
-    <Compile Include="Utils\FileEx.cs" />
-    <Compile Include="Utils\Http.cs" />
-    <Compile Include="Utils\SemanticVersion.cs" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
