--- a/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
+++ b/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="QuickJson" Version="1.0.0" PrivateAssets="all" />
   </ItemGroup>
 
 </Project>
