--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
@@ -1,6 +1,9 @@
-﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" TreatAsLocalProperty="ApplicationIconFilePath;ApplicationManifestFilePath" ToolsVersion="4.0">
+﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
 
   <Target Name="CheckBootstrapperPrerequisites" AfterTargets="Build;Publish">
+    <!-- Warning: not .NET Core -->
+    <Warning Text="Project is not targeting .NET core; bootstrapper will not be created." Condition="'$(MSBuildRuntimeType)' != 'Core'" />
+
     <!-- Warning: not Windows executable -->
     <Warning Text="Project output type is not WinExe; boostrapper will not be created." Condition="'$(OutputType)' != 'WinExe'" />
 
@@ -8,34 +11,12 @@
     <Warning Text="Target platform is not Windows; boostrapper will not be created." Condition="'$(TargetPlatformIdentifier)' != 'Windows'" />
   </Target>
 
-  <Target Name="CreateBootstrapperAfterBuild" AfterTargets="Build" Condition="'$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
-    <PropertyGroup>
-      <ApplicationIconFilePath Condition="'$(ApplicationIcon)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationIcon)'))</ApplicationIconFilePath>
-      <ApplicationManifestFilePath Condition="'$(ApplicationManifest)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationManifest)'))</ApplicationManifestFilePath>
-    </PropertyGroup>
-
-    <CreateBootstrapperTask
-      TargetTitle="$(AssemblyTitle)"
-      TargetFilePath="$(TargetPath)"
-      TargetRuntimeName="Microsoft.WindowsDesktop.App"
-      TargetRuntimeVersion="$([System.String]::Copy('$(TargetFrameworkVersion)').Trim('v'))"
-      IconFilePath="$(ApplicationIconFilePath)"
-      ManifestFilePath="$(ApplicationManifestFilePath)" />
+  <Target Name="CreateBootstrapperAfterBuild" AfterTargets="Build" Condition="'$(MSBuildRuntimeType)' == 'Core' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+    <CreateBootstrapperTask TargetFilePath="$(TargetPath)" />
   </Target>
 
-  <Target Name="CreateBootstrapperAfterPublish" AfterTargets="Publish" Condition="'$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
-    <PropertyGroup>
-      <ApplicationIconFilePath Condition="'$(ApplicationIcon)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationIcon)'))</ApplicationIconFilePath>
-      <ApplicationManifestFilePath Condition="'$(ApplicationManifest)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationManifest)'))</ApplicationManifestFilePath>
-    </PropertyGroup>
-
-    <CreateBootstrapperTask
-      TargetTitle="$(AssemblyTitle)"
-      TargetFilePath="$([System.IO.Path]::Combine('$(ProjectDir)', '$(PublishDir)/$(AssemblyName).dll'))"
-      TargetRuntimeName="Microsoft.WindowsDesktop.App"
-      TargetRuntimeVersion="$([System.String]::Copy('$(TargetFrameworkVersion)').Trim('v'))"
-      IconFilePath="$(ApplicationIconFilePath)"
-      ManifestFilePath="$(ApplicationManifestFilePath)" />
+  <Target Name="CreateBootstrapperAfterPublish" AfterTargets="Publish" Condition="'$(MSBuildRuntimeType)' == 'Core' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+    <CreateBootstrapperTask TargetFilePath="$([System.IO.Path]::Combine('$(ProjectDir)', '$(PublishDir)/$(AssemblyName).dll'))" />
   </Target>
 
 </Project>
