--- a/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
+++ b/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="QuickJson" Version="1.0.0" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Management, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>C:\Users\Tyrrr\.nuget\packages\microsoft.netframework.referenceassemblies.net35\1.0.2\build\.NETFramework\v3.5\System.Management.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
