--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
@@ -1,6 +1,6 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
 
-  <Target Name="CheckBootstrapperPrerequisites" AfterTargets="Build;Publish">
+  <Target Name="CheckBootstrapperPrerequisites" AfterTargets="Publish">
     <!-- Warning: not .NET Core -->
     <Warning Text="Project is not targeting .NET Core. Bootstrapper will not be created." Condition="'$(MSBuildRuntimeType)' != 'Core'" />
 
@@ -11,7 +11,7 @@
     <Warning Text="Target platform is not Windows. Boostrapper will not be created." Condition="'$(TargetPlatformIdentifier)' != 'Windows'" />
   </Target>
 
-  <Target Name="CreateBootstrapperAfterBuild" AfterTargets="Build" Condition="'$(MSBuildRuntimeType)' == 'Core' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+  <Target Name="CreateBootstrapperAfterBuild" AfterTargets="Build" Condition="$(GenerateBootstrapperOnBuild) == true AND '$(MSBuildRuntimeType)' == 'Core' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
     <CreateBootstrapperTask TargetFilePath="$(TargetPath)" />
   </Target>
 
