--- a/DotnetRuntimeBootstrapper.Demo/DotnetRuntimeBootstrapper.Demo.csproj
+++ b/DotnetRuntimeBootstrapper.Demo/DotnetRuntimeBootstrapper.Demo.csproj
@@ -7,7 +7,8 @@
     <UseWindowsForms>true</UseWindowsForms>
     <Version>1.2.3</Version>
     <ApplicationIcon>../favicon.ico</ApplicationIcon>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationManifest>Manifest.xml</ApplicationManifest>
+    <GenerateBootstrapperOnBuild>true</GenerateBootstrapperOnBuild>
   </PropertyGroup>
 
   <!-- Import props/targets manually (normally taken care of by NuGet) -->
