--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
@@ -1,8 +1,8 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
 
-  <Target Name="CheckBootstrapperPrerequisites" AfterTargets="Publish">
+  <Target Name="CheckBootstrapperPrerequisites" BeforeTargets="CreateBootstrapperAfterBuild;CreateBootstrapperAfterPublish">
     <!-- Warning: not .NET Core -->
-    <Warning Text="Project is not targeting .NET Core. Bootstrapper will not be created." Condition="'$(MSBuildRuntimeType)' != 'Core'" />
+    <Warning Text="Project is not targeting .NET Core. Bootstrapper will not be created." Condition="'$(TargetFrameworkIdentifier)' != '.NETCoreApp'" />
 
     <!-- Warning: not Windows executable -->
     <Warning Text="Project output type is not WinExe. Boostrapper will not be created." Condition="'$(OutputType)' != 'WinExe'" />
@@ -11,11 +11,15 @@
     <Warning Text="Target platform is not Windows. Boostrapper will not be created." Condition="'$(TargetPlatformIdentifier)' != 'Windows'" />
   </Target>
 
-  <Target Name="CreateBootstrapperAfterBuild" AfterTargets="Build" Condition="$(GenerateBootstrapperOnBuild) == true AND '$(MSBuildRuntimeType)' == 'Core' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+  <Target Name="CreateBootstrapperAfterBuild"
+          AfterTargets="Build"
+          Condition="$(GenerateBootstrapperOnBuild) == true AND '$(TargetFrameworkIdentifier)' == '.NETCoreApp' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
     <CreateBootstrapperTask TargetFilePath="$(TargetPath)" />
   </Target>
 
-  <Target Name="CreateBootstrapperAfterPublish" AfterTargets="Publish" Condition="'$(MSBuildRuntimeType)' == 'Core' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+  <Target Name="CreateBootstrapperAfterPublish"
+          AfterTargets="Publish"
+          Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp' AND '$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
     <CreateBootstrapperTask TargetFilePath="$([System.IO.Path]::Combine('$(ProjectDir)', '$(PublishDir)/$(AssemblyName).dll'))" />
   </Target>
 
